--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -57,7 +57,16 @@
                     </RadzenPanelMenuItem>
 
                     <RadzenPanelMenuItem style="background-color:#28363c;" Text="Farmacia" >
-                        <RadzenPanelMenuItem  Text="Inventario" Path="C_EmergenciaA" />
+                        <RadzenPanelMenuItem  Text="Inventario" Path="Inventario" />
+                        <RadzenPanelMenuItem  Text="Agregar" Path="R_Articulo" />
+                        <RadzenPanelMenuItem  Text="Entrada" Path="Entradas" />
+                        <RadzenPanelMenuItem  Text="Salida" Path="Salidas" />
+                    </RadzenPanelMenuItem>
+
+                    <RadzenPanelMenuItem style="background-color:#28363c;" Text="Suplidores" >
+                        <RadzenPanelMenuItem  Text="Consultar" Path="" />
+                        <RadzenPanelMenuItem  Text="Agregar " Path="" />
+                        <RadzenPanelMenuItem  Text="Reporte" Path="" />
                     </RadzenPanelMenuItem>
 
 
