--- a/Pages/Vistas/V_Emergencia.razor
+++ b/Pages/Vistas/V_Emergencia.razor
@@ -1,6 +1,6 @@
 ﻿@page "/V_Emergencia"
 @page "/V_Emergencia/{OrdenID:int}"
- <h1>Nueva Emergencia</h1>
+ <h1>Ver Emergencia</h1>
 
 @inject NotificationService notificationService
 @inject EmergenciaBLL emergenciaBll
@@ -14,7 +14,7 @@
         padding: 5px;
         align-items: center;
     }
-    .Entrada label{
+    .Entrada input{
         border-radius: 50px;
         background-color:#D9D9D9;
         border-color: #D9D9D9;
@@ -52,120 +52,138 @@
         
     <div class="Form"  style="z-index: 1;">
     
-   
-        <div style=" width:100%;">
-            
             <div>
                 <br>
                 <div style="display: flex; justify-content: space-between;">
                     <div>
-                        <RadzenDropDown Disabled=true AllowClear="true" TValue="string"
+                        
+                        <RadzenDropDown  AllowClear="true" TValue="int" Disabled="true"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
-                            class="w-100" Placeholder="Paciente"  Data="Pacientes.GetList()"
-                            TextProperty="Cedula" ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            class="w-100" Placeholder="Paciente"  Data="Pacientes.GetList()" TextProperty="Cedula"
+                            @bind-value=@emergencia.PacienteID ValueProperty="PacienteID" style="border-radius: 50px; background-color: #ffffff; border-color: #ffffff; border: 15px; margin: 5px;"
                             />
+                            
                     </div>
 
                     <div style="display: flex;">
                         <div class="Entrada" style="display: flex;">
                             <RadzenLabel >Fecha</RadzenLabel>
-                            <RadzenDatePicker Disabled=true @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+                            <RadzenDatePicker Disabled="true" @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
                         </div>
                     </div>
                 </div>
 
+    </div>
 
-            </div>
-        </div>
+    <div>
 
         <br>
         <div class="Entrada">
             <label for="M_Consulta">Motivo de Consulta:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.M_Consulta" name="M_Consulta"/>
+            <RadzenTextBox Disabled="true" type="M_Consulta"  id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
         </div>
 
         <div class="Entrada">
             <label for="A_Relacionados">Antecedentes Relacionados:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.Antecedentes" 
-                name="A_Relacionados"/>
+            <RadzenTextBox Disabled="true"  type="A_Relacionados" id="A_Relacionados" @bind-Value="emergencia.Antecedentes" name="A_Relacionados"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="A_Previas">Atenciones Previas:</label>
-            <RadzenTextBox  Disabled=true Bind="emergencia.AtencionesPrevias"  name="A_Previas"/>
+            <RadzenTextBox Disabled="true"  type="A_Previas" id="A_Previas" name="A_Previas"/>
         </div>
 
         <div class="Entrada">
             <label for="Donde">Donde?</label>
-            <RadzenTextBox Disabled=true name="Donde"/>
+            <RadzenTextBox Disabled="true"  type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
         </div>
 
         <div class="Entrada">
             <label for="M_Base">Medico Base:</label>
-            <RadzenTextBox Disabled=true name="M_Base"/>
+            <RadzenTextBox Disabled="true" type="M_Base" id="M_Base" @bind-Value="emergencia.MedicoBase" name="M_Base"/>
         </div>
 
         <div class="Entrada">
             <label for="Peso">Peso:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.Peso" name="Peso"/>
+            <RadzenNumeric Disabled="true"  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+             @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
-        <div class="Entrada">
+        <div class="Entrada" style="display: flex;">
             <label>Signos Vitales</label>
             <label for="TA">TA:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.TA" name="TA"/>
+            <RadzenNumeric Disabled="true" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.TA" name="TA"/>
             <label for="FC">FC:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.FC" name="FC"/>
+            <RadzenNumeric Disabled="true"  id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FR" name="FR"/>
+            <label for="FR">FR</label>
+            <RadzenNumeric Disabled="true"  id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FC" name="FC"/>
             <label for="Temperatura">Temperatura:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.Temperatura" name="Temperatura"/>
+            <RadzenNumeric Disabled="true"  id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.Temperatura" name="Temperatura"/>
             <label for="Temperatura">C</label>
         </div>
+
         <RadzenTabs SelectedIndex="0">
         
         <Tabs>
     
-        <RadzenTabsItem Text="Laboratorio">
+        <RadzenTabsItem Text="Diagnostico">
 
+ 
+        <div class="Entrada" id="Hallazgos" style="width: 100%;;">
+
+            <div style="display: flex;">
+                <label for="Diagnostico">Diagnostico</label>
+                <RadzenTextArea Disabled="true" style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
+            </div>
+        </div>
+        </RadzenTabsItem>
+        <RadzenTabsItem Text="Laboratorio">
         <div class="Entrada" style="display: flex;">
-            <label>Laboratorios</label>
+
+            <br>
             <label for="Hemograma">Hemograma:</label>
-            <RadzenTextBox Disabled=true  Bind="emergencia.Hemogramas"  name="Hemograma"/>
+            <RadzenNumeric Disabled="true" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Hemograma" @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
             <label for="Ex_Orina">Ex.Orina:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.Ex_Orina" name="Ex_Orina"/>
+            <RadzenNumeric Disabled="true" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Ex_Orina" @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
             <label for="Glisemia">Glisemia:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.Glisemia" name="Glisemia"/>
+            <RadzenNumeric Disabled="true" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Glisemia"@bind-Value="emergencia.Glisemia" name="Glisemia"/>
             <label for="Coprologico">Coprologico:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.Coprologico" name="Coprologico"/>
+            <RadzenNumeric Disabled="true" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Coprologico" @bind-Value="emergencia.Coprologico" name="Coprologico"/>
         </div>
         <br>
         <div class="Entrada" style="display: flex; align-items: center;">
             <label for="Imagenes">Imagenes:</label>
-            <RadzenTextBox Disabled=true Bind="emergencia.Imagenes" name="Imagenes"/>
+            <RadzenNumeric Disabled="true" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
 
-            <label for="Especificacion">Especfique</label>
-            <RadzenTextArea Disabled=true type="Especificacion" id="Especificacion" Bind="emergencia.Especifique"
-                name="Especificacion"></RadzenTextArea>
+            <label for="Especificacion">Especifique</label>
+            <RadzenTextArea  Disabled="true" style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
         </RadzenTabsItem>
-        <RadzenTabsItem Text="Diagnostico">
-    
-    <div class="Entrada" style="display: flex;">
-        <label for="Diagnostico">Diagnostico</label>
-        <RadzenTextArea Disabled=true Bind="emergencia.Diagnostico" name="Diagnostico"/>
+        </Tabs>
+        </RadzenTabs>
     </div>
+    <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
-        <RadzenTextArea  Disabled=true Bind="emergencia.TyM" name="TyM"></RadzenTextArea>
+        <RadzenTextArea Disabled="true" id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
     </div>
-    </RadzenTabsItem>
-    </Tabs>
-    </RadzenTabs>
+    </div>
     <center>
-        <a href="/E_Emergencia/@emergencia.OrdenID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
+
+        <a href="/E_Emergencia/@OrdenID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
         <a href="/"><button type="button" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;" @onclick="Eliminar">Eliminar</button></a>
     </center>
-</div>
+
 
 
 
@@ -222,7 +240,8 @@
 
 
     public void Eliminar(){
+        emergenciaBll.hidden(this.emergencia);
         ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Error, Summary = "Registro Actualizado", Detail = "Eliminado con Exito", Duration = 4000 });
-
+        
     }
 }
