--- a/Pages/Vistas/V_EmergenciaA.razor
+++ b/Pages/Vistas/V_EmergenciaA.razor
@@ -1,9 +1,10 @@
-﻿@page "/V_EmergenciaA"
-@page "/V_EmergenciaA/{OrdenID:int}"
+﻿@page "/V_EmergenciaAA"
+@page "/V_EmergenciaAA/{OrdenID:int}"
+<h3>Ver EmergenciaA Asegurada</h3>
 
 @inject NotificationService notificationService
 @inject EmergenciaABLL EmergenciaA
-@inject PacienteBLL Paciente
+
 
 <head>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
@@ -14,12 +15,13 @@
             align-items: center;
         }
 
-        .Entrada label {
+        .Entrada input {
             border-radius: 50px;
             background-color: #D9D9D9;
             border-color: #D9D9D9;
             border: 15px;
             margin: 5px;
+            justify-items: center;
         }
 
         .Entrada label {
@@ -62,8 +64,8 @@
                         
                         <RadzenDropDown Disabled=true  AllowClear="true" TValue="string"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
-                            class="w-100" Placeholder="Paciente"  Data="Paciente.GetList()" TextProperty="Cedula"
-                            ValueProperty="PacienteID"  style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            class="w-100" Placeholder="emergenciaA"  Data="EmergenciaA.GetList()" TextProperty="Cedula"
+                            ValueProperty="emergenciaAID"  
                             />
                             
                     </div>
@@ -71,7 +73,7 @@
                     <div style="display: flex;">
                         <div class="Entrada" style="display: flex;">
                             <RadzenLabel >Fecha</RadzenLabel>
-                            <RadzenDatePicker Disabled=true @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+                            <RadzenDatePicker Disabled=true @bind-Value=@emergenciaA.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
                         </div>
                     </div>
                 </div>
@@ -81,23 +83,23 @@
     <div>
         <div class="Entrada">
             <label for="ars">ARS:</label>
-            <RadzenTextBox Disabled=true  id="ars"@bind-Value="emergencia.ARS" name="ars"/>
+            <RadzenTextBox Disabled=true  id="ars"@bind-Value="emergenciaA.ARS" name="ars"/>
         </div>
 
         <div class="Entrada" style="">
             <label for="nss">NSS:</label>
             <RadzenNumeric  Disabled=true id="nss" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            @bind-Value="emergencia.NSS" name="nss"/>
+            @bind-Value="emergenciaA.NSS" name="nss"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="M_Consulta">Motivo de Consulta:</label>
-            <RadzenTextBox Disabled=true type="M_Consulta" id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
+            <RadzenTextBox Disabled=true type="M_Consulta" id="M_Consulta" @bind-Value="emergenciaA.M_Consulta" name="M_Consulta"/>
         </div>
 
         <div class="Entrada">
             <label for="A_Relacionados">Antecedentes Relacionados:</label>
-            <RadzenTextBox Disabled=true type="A_Relacionados" id="A_Relacionados" @bind-Value="emergencia.Antecedentes" name="A_Relacionados"/>
+            <RadzenTextBox Disabled=true type="A_Relacionados" id="A_Relacionados" @bind-Value="emergenciaA.Antecedentes" name="A_Relacionados"/>
         </div>
         <br>
         <div class="Entrada">
@@ -107,35 +109,35 @@
 
         <div class="Entrada">
             <label for="Donde">Donde?</label>
-            <RadzenTextBox Disabled=true type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
+            <RadzenTextBox Disabled=true type="Donde" id="Donde" @bind-Value="emergenciaA.Donde" name="Donde"/>
         </div>
 
         <div class="Entrada">
             <label for="M_Base">Medico Base:</label>
-            <RadzenTextBox Disabled=true type="M_Base" id="M_Base" @bind-Value="emergencia.MedicoBase" name="M_Base"/>
+            <RadzenTextBox Disabled=true type="M_Base" id="M_Base" @bind-Value="emergenciaA.MedicoBase" name="M_Base"/>
         </div>
 
         <div class="Entrada">
             <label for="Peso">Peso:</label>
             <RadzenNumeric  Disabled=true id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            @bind-Value="emergencia.Peso" name="Peso"/>
+            @bind-Value="emergenciaA.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
-        <div class="Entrada">
+        <div class="Entrada" style="display: flex;">
             <label>Signos Vitales</label>
             <label for="TA">TA:</label>
             <RadzenNumeric Disabled=true ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            @bind-Value="emergencia.TA" name="TA"/>
+            @bind-Value="emergenciaA.TA" name="TA"/>
             <label for="FC">FC:</label>
             <RadzenNumeric  Disabled=true id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            @bind-Value="emergencia.FR" name="FR"/>
+            @bind-Value="emergenciaA.FR" name="FR"/>
             <label for="FR">FR</label>
             <RadzenNumeric  Disabled=true id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            @bind-Value="emergencia.FC" name="FC"/>
+            @bind-Value="emergenciaA.FC" name="FC"/>
             <label for="Temperatura">Temperatura:</label>
             <RadzenNumeric  Disabled=true id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            @bind-Value="emergencia.Temperatura" name="Temperatura"/>
+            @bind-Value="emergenciaA.Temperatura" name="Temperatura"/>
             <label for="Temperatura">C</label>
         </div>
 
@@ -145,44 +147,44 @@
     
         <RadzenTabsItem Text="Diagnostico">
 
-        <hr>
+ 
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
             <label style="color: rgb(103, 100, 100);">Hallazgos Positivos en el examen fisico</label>
             <div style="display: flex;">
                 <label for="Cabeza">Cabeza</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;" type="Cabeza" id="Cabeza" @bind-Value="emergencia.Cabeza" name="Cabeza"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;" type="Cabeza" id="Cabeza" @bind-Value="emergenciaA.Cabeza" name="Cabeza"/>
             </div>
             <div style="display: flex;">
                 <label for="Cuello">Cuello</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;" type="Cuello" id="Cuello" @bind-Value="emergencia.Cuello" name="Cuello"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;" type="Cuello" id="Cuello" @bind-Value="emergenciaA.Cuello" name="Cuello"/>
             </div>
             <div style="display: flex;">
                 <label for="Torax">Torax</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Torax" @bind-Value="emergencia.Torax" name="Torax"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Torax" @bind-Value="emergenciaA.Torax" name="Torax"/>
             </div>
             <div style="display: flex;">
                 <label for="Pulmones">Pulmones</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Pulmones" @bind-Value="emergencia.Pulmones" name="Pulmones"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Pulmones" @bind-Value="emergenciaA.Pulmones" name="Pulmones"/>
             </div>
             <div style="display: flex;">
                 <label for="Corazon">Corazon</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Corazon" @bind-Value="emergencia.Corazon" name="Corazon"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Corazon" @bind-Value="emergenciaA.Corazon" name="Corazon"/>
             </div>
             <div style="display: flex;">
                 <label for="Abdomen">Abdomen</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Abdomen" @bind-Value="emergencia.Abdomen" name="Abdomen"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Abdomen" @bind-Value="emergenciaA.Abdomen" name="Abdomen"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Inferiores">Extreminades Inferiores</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;"  id="E_Inferiores" @bind-Value="emergencia.E_Inferiores" name="E_Inferiores"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="E_Inferiores" @bind-Value="emergenciaA.E_Inferiores" name="E_Inferiores"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Superiores">Extreminades Superiores</label>
-                <RadzenTextBox  Disabled=true style="width: 100%;"  id="E_Superiores" @bind-Value="emergencia.E_Superiores" name="E_Superiores"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="E_Superiores" @bind-Value="emergenciaA.E_Superiores" name="E_Superiores"/>
             </div>
             <div style="display: flex;">
                 <label for="Diagnostico">Diagnostico</label>
-                <RadzenTextArea Disabled=true style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
+                <RadzenTextArea Disabled=true style="width: 100%;"   id="Diagnostico" @bind-Value="emergenciaA.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
         </RadzenTabsItem>
@@ -194,31 +196,31 @@
             <br>
             <label for="Hemograma">Hemograma:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            id="Hemograma" Disabled=true @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
+            id="Hemograma" Disabled=true @bind-Value="emergenciaA.Hemogramas" name="Hemograma"/>
             <label for="Ex_Orina">Ex.Orina:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            id="Ex_Orina" Disabled=true @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
+            id="Ex_Orina" Disabled=true @bind-Value="emergenciaA.Ex_Orina" name="Ex_Orina"/>
             <label for="Glisemia">Glisemia:</label>
             <RadzenNumeric Disabled=true ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            id="Glisemia"@bind-Value="emergencia.Glisemia" name="Glisemia"/>
+            id="Glisemia"@bind-Value="emergenciaA.Glisemia" name="Glisemia"/>
             <label for="Coprologico">Coprologico:</label>
             <RadzenNumeric Disabled=true  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            id="Coprologico" @bind-Value="emergencia.Coprologico" name="Coprologico"/>
+            id="Coprologico" @bind-Value="emergenciaA.Coprologico" name="Coprologico"/>
         </div>
         <br>
         <div class="Entrada" style="display: flex; align-items: center;">
             <label for="Imagenes">Imagenes:</label>
             <RadzenNumeric Disabled=true  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
+            id="Imagenes"@bind-Value="emergenciaA.Imagenes" name="Imagenes"/>
 
             <label for="Especificacion">Especfique</label>
-            <RadzenTextArea Disabled=true  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
+            <RadzenTextArea Disabled=true  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergenciaA.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
     
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
-        <RadzenTextArea Disabled=true  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
+        <RadzenTextArea Disabled=true  id="TyM" style="width: 100%;" @bind-Value="emergenciaA.TyM" name="TyM"></RadzenTextArea>
     </div>
         </RadzenTabsItem>
     </Tabs>
@@ -226,7 +228,7 @@
     </div>
     </div>
     <center>
-        <a href="/E_EmergenciaA/@emergencia.OrdenID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
+        <a href="/E_EmergenciaAA/@emergenciaA.OrdenID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
         <a href="/"><button type="button" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;" @onclick="Eliminar">Eliminar</button></a>
     </center>
 </body>
@@ -235,12 +237,12 @@
     [Parameter]
         public int OrdenID {get;set;}
 
-    public EmergenciaA emergencia {get; set;} = new EmergenciaA();
+    public EmergenciaA emergenciaA {get; set;} = new EmergenciaA();
 
     protected override void OnInitialized(){
         if (OrdenID > 0)
         {
-            this.emergencia.OrdenID = this.OrdenID;
+            this.emergenciaA.OrdenID = this.OrdenID;
             this.Buscar();
         }
     }
@@ -248,11 +250,11 @@
 
     private void Buscar()
     {
-        var emergenciaEncontrada = EmergenciaA.Buscar(emergencia.OrdenID);
-        if(emergenciaEncontrada != null)
+        var emergenciaAEncontrada = EmergenciaA.Buscar(emergenciaA.OrdenID);
+        if(emergenciaAEncontrada != null)
         {
-            Console.WriteLine($"Se encontro una ocupacion con el ID{this.emergencia.OrdenID}");
-            this.emergencia = emergenciaEncontrada;
+            Console.WriteLine($"Se encontro una ocupacion con el ID{this.emergenciaA.OrdenID}");
+            this.emergenciaA = emergenciaAEncontrada;
             
         }
         else
@@ -267,13 +269,13 @@
         notificationService.Notify(message);
     }
     public void Nuevo(){
-        this.emergencia = new EmergenciaA();
+        this.emergenciaA = new EmergenciaA();
     }
 
     public void Guardar(){
 
-        EmergenciaA.Guardar(this.emergencia);
-        Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
+        EmergenciaA.Guardar(this.emergenciaA);
+        Console.WriteLine($"Se guardo en el {this.emergenciaA.OrdenID}");
         this.Nuevo();
         
         
@@ -284,6 +286,8 @@
 
 
     public void Eliminar(){
+        EmergenciaA.hidden(this.emergenciaA);
         ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Error, Summary = "Registro Actualizado", Detail = "Eliminado con Exito", Duration = 4000 });
+        
     }
 }
