Entrada y Salida Agregadas

--- a/Pages/Farmacia/R_Entrada.razor
+++ b/Pages/Farmacia/R_Entrada.razor
@@ -10,6 +10,7 @@
             display: inline-block;
             padding: 5px;
             align-items: center;
+            
         }
 
         .Entrada input {
@@ -18,6 +19,7 @@
             border-color: #D9D9D9;
             border: 15px;
             margin: 5px;
+            
         }
 
         .Entrada label {
@@ -52,36 +54,36 @@
     
 
 <h1>Entradas</h1>
-
-    <RadzenDropDown AllowClear="true" TValue="string"
+    
+    <RadzenDropDown AllowClear="true" TValue="int"  @bind-Value="entrada.ArticuloID"
     FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
-    class="w-100" Placeholder="articulo"  Data="ArticuloBLL.GetList()" TextProperty= "Descripcion"
+    class="w-100" Name="Articulo" Placeholder="articulo"  Data="ArticuloBLL.GetList()" TextProperty= "Descripcion"
     ValueProperty="ArticuloID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
-     />
+    />
 
-
+    <div style="display: flex; align-items: flex-end;">
         <div class="Entrada">
         <label for="Costo">Cantidad:</label>
-        <RadzenNumeric  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"  name="Cantidad" @bind-Value="OrdenInventario.Cantidad"/>
+        <RadzenNumeric  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"  name="Cantidad" @bind-Value="entrada.Cantidad"/>
     </div>
         <div class="Entrada">
         <label for="Razon">Razon:</label>
-        <RadzenTextBox  name="Razon" @bind-Value="OrdenInventario.Razon"/>
+        <RadzenTextBox  name="Razon" @bind-Value="entrada.Razon"/>
     </div>
         <div class="Entrada">
         <label for="Precio">Fecha:</label>
-        <RadzenDatePicker  name="Fecha " @bind-Value="OrdenInventario.Fecha"/>
+        <RadzenDatePicker @bind-Value=@entrada.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
     </div>
-
+    </div>
     <center>
         <button type="button" class="btn btn-primary"
             style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
             @onclick="Guardar">Registrar</button>
     </center>
-
+<hr>
 <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced"
     AllowGrouping="true" AllowSorting="true" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left"
-    Data="EntradaBLL.GetList()" TItem="OrdenInventario" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
+    Data="EntradaBLL.GetList()" TItem="Entrada" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
 
         <Columns>
                 <RadzenDataGridColumn Filterable="false" Sortable="false" TItem="Articulo" Frozen="true" Title="Acciones">
@@ -89,10 +91,10 @@
                 <RadzenLink Path=@($"V_Articulo/{Item.ArticuloID}") Text="Ver" />
             </Template>
                 </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="OrdenInventario" Property="ArticuloID" Title="Articulo" />
-            <RadzenDataGridColumn TItem="OrdenInventario" Property="Cantidad" Title="Cantidad" />
-            <RadzenDataGridColumn TItem="OrdenInventario" Property="Razon" Title="Razon" />
-            <RadzenDataGridColumn TItem="OrdenInventario" Property="Fecha" Title="Fecha" />
+            <RadzenDataGridColumn TItem="Entrada" Property="ArticuloID" Title="Articulo" />
+            <RadzenDataGridColumn TItem="Entrada" Property="Cantidad" Title="Cantidad" />
+            <RadzenDataGridColumn TItem="Entrada" Property="Razon" Title="Razon" />
+            <RadzenDataGridColumn TItem="Entrada" Property="Fecha" Title="Fecha" />
 
 
         </Columns>
@@ -101,7 +103,7 @@
 
 </body>
 @code {
-    public OrdenInventario OrdenInventario { get; set; } = new OrdenInventario();
+    public Entrada entrada { get; set; } = new Entrada();
     
     protected override void OnInitialized()
     {
@@ -116,13 +118,13 @@
 
     public void Nuevo()
     {
-        this.OrdenInventario = new OrdenInventario();
+        this.entrada = new Entrada();
     }
 
     public void Guardar()
     {
 
-        if(EntradaBLL.Guardar(this.OrdenInventario))
+        if(EntradaBLL.Guardar(this.entrada))
         {
             this.Nuevo();
             ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Registro Actualizado", Detail = "Guardado con Exito", Duration = 4000 });
