--- a/Pages/Consultas/C_Emergencia.razor
+++ b/Pages/Consultas/C_Emergencia.razor
@@ -56,7 +56,7 @@
         <Columns>
             <RadzenDataGridColumn TItem="Emergencia" Filterable="false" Sortable="false"  Frozen="true" Title="Acciones">
                 <Template Context="Item">
-                    <RadzenLink Path=@($"V_Emergencia/{Item.OrdenID}") Text="Ver" />
+                    <RadzenLink Path=@($"V_Emergencia/{Item.OrdenID}") Text="Ver" ><RadzenBadge BadgeStyle="BadgeStyle.Secondary" Text="Ver" /></RadzenLink>
                 </Template>
             </RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="Emergencia" Filterable="true" Sortable="true"  Frozen="false" Title="PacienteId">
