--- a/Pages/Consultas/C_Paciente.razor
+++ b/Pages/Consultas/C_Paciente.razor
@@ -52,7 +52,7 @@
         <Columns>
                     <RadzenDataGridColumn Filterable="false" Sortable="false" TItem="Paciente" Frozen="true" Title="Acciones">
                 <Template Context="Item">
-                    <RadzenLink Path=@($"V_Paciente/{Item.PacienteID}") Text="Ver" />
+                    <RadzenLink Path=@($"V_Paciente/{Item.PacienteID}") Text="Ver" ><RadzenBadge BadgeStyle="BadgeStyle.Secondary" Text="Ver" /></RadzenLink>
                 </Template>
                     </RadzenDataGridColumn>
             <RadzenDataGridColumn TItem="Paciente" Property="PrimerNombre" Title="Primer nombre" />
